--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -18,7 +19,6 @@
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
-    "typescript": "^4.1.5",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "typescript": "^4.1.5"
   }
 }
